--- a/MyTrax/AddTracksVC/AddTracksVC.xib
+++ b/MyTrax/AddTracksVC/AddTracksVC.xib
@@ -22,18 +22,19 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ecU-iP-u0h">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                    <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </tableView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="ecU-iP-u0h" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="5f2-rY-rCR"/>
                 <constraint firstItem="ecU-iP-u0h" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="Eqc-m3-qM8"/>
+                <constraint firstItem="ecU-iP-u0h" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="Lae-dY-pp6"/>
                 <constraint firstAttribute="trailing" secondItem="ecU-iP-u0h" secondAttribute="trailing" id="qff-EF-wpv"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="ecU-iP-u0h" secondAttribute="bottom" id="qjN-WU-f0j"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <point key="canvasLocation" x="25.5" y="51.5"/>
         </view>
     </objects>
 </document>
