--- a/MyTrax/AddTracksVC/TrackImageCell/TrackImageCell.xib
+++ b/MyTrax/AddTracksVC/TrackImageCell/TrackImageCell.xib
@@ -12,29 +12,41 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="TrackImageCell" rowHeight="125" id="KGk-i7-Jjw" customClass="TrackImageCell" customModule="MyTrax" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="125"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="TrackImageCell" rowHeight="175" id="KGk-i7-Jjw" customClass="TrackImageCell" customModule="MyTrax" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="175"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="124.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="174.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="addImageIcon" translatesAutoresizingMaskIntoConstraints="NO" id="ENr-lX-fOh">
-                        <rect key="frame" x="8" y="8" width="304" height="108.5"/>
+                        <rect key="frame" x="8" y="8" width="304" height="149.5"/>
                     </imageView>
+                    <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progressViewStyle="bar" translatesAutoresizingMaskIntoConstraints="NO" id="dCa-v7-Isc">
+                        <rect key="frame" x="8" y="165" width="304" height="2.5"/>
+                        <color key="backgroundColor" red="0.73333333329999995" green="0.76470588240000004" blue="0.77647058820000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="1" id="k1q-ys-4uY"/>
+                        </constraints>
+                        <color key="progressTintColor" red="0.58823529411764708" green="0.15294117647058825" blue="0.082352941176470587" alpha="1" colorSpace="calibratedRGB"/>
+                    </progressView>
                 </subviews>
                 <constraints>
+                    <constraint firstAttribute="bottom" secondItem="dCa-v7-Isc" secondAttribute="bottom" constant="8" id="6XU-TE-SZz"/>
                     <constraint firstAttribute="trailing" secondItem="ENr-lX-fOh" secondAttribute="trailing" constant="8" id="Ezc-g3-e98"/>
-                    <constraint firstAttribute="bottom" secondItem="ENr-lX-fOh" secondAttribute="bottom" constant="8" id="Wou-ma-cDb"/>
+                    <constraint firstItem="dCa-v7-Isc" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="anB-L7-fbS"/>
+                    <constraint firstAttribute="trailing" secondItem="dCa-v7-Isc" secondAttribute="trailing" constant="8" id="bG8-tH-ll0"/>
                     <constraint firstItem="ENr-lX-fOh" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="dmE-oe-fIW"/>
+                    <constraint firstItem="dCa-v7-Isc" firstAttribute="top" secondItem="ENr-lX-fOh" secondAttribute="bottom" constant="8" id="tBH-1h-TEX"/>
                     <constraint firstItem="ENr-lX-fOh" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="uqQ-Pm-GVG"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="progresView" destination="dCa-v7-Isc" id="dhO-JZ-EDc"/>
                 <outlet property="trackProfileImageView" destination="ENr-lX-fOh" id="6RH-0C-mF4"/>
             </connections>
-            <point key="canvasLocation" x="25" y="92.5"/>
+            <point key="canvasLocation" x="25" y="117.5"/>
         </tableViewCell>
     </objects>
     <resources>
